# esm_web

./: .gitignore  Cargo.toml  README.md  index.html  tokenizer.json  worker.js
pkg/: esm_rs.d.ts  esm_rs.js  esm_rs_bg.wasm.d.ts
src/: lib.rs
src/models/: bert.rs  esm2.rs  mod.rs  utils.rs
